--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,10 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
-	"version": "1.0.0",
-	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
-	"isDesktopOnly": false
+        "id": "shadowlink",
+        "name": "ShadowLink",
+        "version": "0.1.0",
+        "minAppVersion": "0.15.0",
+        "description": "Real-time collaborative editing using Yjs and a WebSocket server.",
+        "author": "ShadowLink Team",
+        "authorUrl": "https://github.com/Phobetore/ShadowLink",
+        "isDesktopOnly": false
 }
