--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
-        "name": "shadowlink",
-        "version": "0.1.0",
-        "description": "Real-time collaborative editing plugin for Obsidian",
-	"main": "main.js",
-	"scripts": {
-		"dev": "node esbuild.config.mjs",
-		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-                "version": "node version-bump.mjs && git add manifest.json versions.json",
-                "server": "node server.js"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "MIT",
-        "devDependencies": {
-		"@types/node": "^16.11.6",
-		"@typescript-eslint/eslint-plugin": "5.29.0",
-		"@typescript-eslint/parser": "5.29.0",
-		"builtin-modules": "3.3.0",
-		"esbuild": "0.17.3",
-		"obsidian": "latest",
-		"tslib": "2.4.0",
-                "typescript": "4.7.4",
-                "yjs": "^13.6.27",
-                "y-websocket": "^3.0.0",
-                "y-codemirror.next": "^0.3.5"
-        }
+  "name": "shadowlink",
+  "version": "0.1.0",
+  "description": "Real-time collaborative editing plugin for Obsidian",
+  "main": "main.js",
+  "scripts": {
+    "dev": "node esbuild.config.mjs",
+    "build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
+    "version": "node version-bump.mjs && git add manifest.json versions.json",
+    "server": "node server.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
+  "devDependencies": {
+    "@types/node": "^16.11.6",
+    "@typescript-eslint/eslint-plugin": "5.29.0",
+    "@typescript-eslint/parser": "5.29.0",
+    "builtin-modules": "3.3.0",
+    "esbuild": "^0.25.5",
+    "obsidian": "latest",
+    "tslib": "2.4.0",
+    "typescript": "4.7.4",
+    "y-codemirror.next": "^0.3.5",
+    "y-websocket": "^1.3.14",
+    "yjs": "^13.6.27"
+  },
+  "dependencies": {
+    "ws": "^8.18.2"
+  }
 }
