--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "tslib": "2.4.0",
     "typescript": "4.7.4",
     "y-codemirror.next": "^0.3.5",
+    "y-indexeddb": "^9.0.12",
     "y-websocket": "^1.3.14",
     "yjs": "^13.6.27"
   },
